<resources>
    <string name="app_name">Dnevnjak2.0</string>
    <string name="login">Login</string>
    <string name="action_log_in">Log in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="preference_logged_in">LOGGED_IN</string>
    <string name="invalid_password">Password must be >= 5 characters and not contain special characters: ~#^|$%&amp;*!></string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="ovde_ime_ide">Ovde ime ide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="profile">Profile</string>
    <string name="low">LOW</string>
    <string name="mid">MID</string>
    <string name="high">HIGH</string>
    <string name="all">ALL</string>
    <string name="plan_title">Title</string>
    <string name="time_from">Time from - 23:59</string>
    <string name="time_to">Time to - 23:59</string>
    <string name="search_plans">Search plans by name</string>
</resources>