<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DailyPlanFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/daily_plan_headerTv"
        android:layout_width="0dp"
        android:layout_height="@dimen/headerTv_height"
        android:hint="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/pastObligationsCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Show past obligations"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_plan_headerTv" />

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pastObligationsCheckBox" />

    <LinearLayout
        android:id="@+id/priorityLL"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEt">
        <TextView
            android:id="@+id/allTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/all"/>
        <TextView
            android:id="@+id/lowTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/low"/>
        <TextView
            android:id="@+id/midTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/mid"/>
        <TextView
            android:id="@+id/highTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/high"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityLL" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/add" />

</androidx.constraintlayout.widget.ConstraintLayout>