<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/edit_plan_headerTv"
        android:layout_width="0dp"
        android:layout_height="@dimen/headerTv_height"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/editPriorityLL"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTitleEt"
        app:layout_constraintTop_toBottomOf="@+id/edit_plan_headerTv">
        <Button
            android:id="@+id/editLowBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:backgroundTint="@color/lowButton"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/low"/>
        <Button
            android:id="@+id/editMidBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:backgroundTint="@color/midButton"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/mid"/>
        <Button
            android:id="@+id/editHighBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:backgroundTint="@color/highButton"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/high"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editTitleEt"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:paddingLeft="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="24dp"
        android:background="#FFFF"
        android:hint="@string/plan_title"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPriorityLL"
        app:layout_constraintBottom_toTopOf="@+id/editTimeLL"
        />

    <LinearLayout
        android:id="@+id/editTimeLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:gravity="fill|center"
        app:layout_constraintTop_toBottomOf="@id/editTitleEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/editFromBtn"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:layout_marginEnd="12dp"
            android:text="From"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitleEt"
            />
        <Button
            android:id="@+id/editToBtn"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:text="To"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />
    </LinearLayout>

    <EditText
        android:id="@+id/editInfoEt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:inputType="textLongMessage"
        android:background="#F0E5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTimeLL"
        app:layout_constraintBottom_toTopOf="@id/buttonsLL"/>

    <LinearLayout
        android:id="@+id/buttonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="Delete"
            android:backgroundTint="@color/highButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/editCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>